fix contrast of create note button

--- a/styles.css
+++ b/styles.css
@@ -84,12 +84,12 @@ header {
 }
 
 .note a{
-    color:#ebbcba
+    color:#575279;
     
 }
 
 .note a:hover {
-    color:#9ccfd8;
+    color:#b4637a;
 }
 
 /* Footer
